
-------------------------------------------------------------------------------
Logging
-------------------------------------------------------------------------------

* The logger of the Logging API now complies with the PSR-3 standard of the
  PHP Framework Interop Group: http://www.php-fig.org/psr/3/

-------------------------------------------------------------------------------
Backend
-------------------------------------------------------------------------------

-------------------------------------------------------------------------------
Administration / Customization
-------------------------------------------------------------------------------

-------------------------------------------------------------------------------
Extbase
-------------------------------------------------------------------------------

* Recursive object validation

Validation of object structures in extbase is now done recursively. If a tree
of objects is created by the new property mapper, not only the top level object
is validated, but all objects.

* Allow empty validation

In order to make a property required you now need to add the NotEmptyValidator
to your property. The return value of validators is now optional.

-------------------------------------------------------------------------------
Fluid
-------------------------------------------------------------------------------

* Image view helper does not render title tag by default

In previous versions of fluid the image view helper always rendered the
title attribute. If not set, the value of the required alt attribute was set as
title.
This fallback was removed with version 6.2. If not specifically set, title
is not rendered anymore.

Example:
  Fluid Tag
    <f:image src="{file}" alt="Alt-Attribute" />
  will render
    <img src="fileadmin/xxxx.jpg" alt="Alt-Attribute" />
  and not
    <img src="fileadmin/xxxx.jpg" alt="Alt-Attribute" title="Alt-Attribute" />